[metadata]
name = ismyk8ssecure
version = 0.0.1
author = Shivam Sandbhor
description = Checks for vulnerabilities in a running k8s cluster
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ismyk8ssecure/ismyk8ssecure
project_urls =
    Bug Tracker = https://github.com/ismyk8ssecure/ismyk8ssecure/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved ::  Apache-2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find: 
python_requires = >=3.6
install_requires =
    typer
    requests
    pyyaml
    colorama

[options.entry_points]
console_scripts =
    ismyk8ssecure = cli.main:main
[options.packages.find]
where = src

[options.package_data]
* = *